--- a/day1.html
+++ b/day1.html
@@ -20,17 +20,17 @@
 				    <input type="text" name="where" class="form-control" id="exampleFormControlInput1" placeholder="Anywhere">
 				  </div>
 				  <div class="form-group row">
-				  	<div class="col-lg-6">
+				  	<div class="col-lg-6 col-md-6 col-xs-12">
 				  		<label><b>CHECK-IN</b></label>
 				  		<input type="date" class="form-control" name="check-in" placeholder="mm/dd/yy">
 				  	</div>
-				  	<div class="col-lg-6">
+				  	<div class="col-lg-6 col-md-6 col-xs-12 res">
 				  		<label><b>CHECK-OUT</b></label>
 				  		<input type="date" class="form-control" name="check-out"  placeholder="mm/dd/yy">
 				  	</div>
 				  </div>
 				  <div class="form-group row">
-				  	<div class="col-lg-6">
+				  	<div class="col-lg-6 col-md-6 col-xs-12">
 				  		<label><b>ADULT</b></label>
 				  		<select id="inputState" class="form-control">
 					        <option selected>1 adult</option>
@@ -51,7 +51,7 @@
 					        <option>16 adult</option>
 					      </select>
 				  	</div>
-				  	<div class="col-lg-6">
+				  	<div class="col-lg-6 col-md-6 col-xs-12 res">
 				  		<label><b>CHILDREN</b></label>
 				  		<select id="inputState" class="form-control">
 					        <option selected>0 children</option>
@@ -78,7 +78,7 @@
 				<span class="para">United States home were rated <b>4.8 out of 5 stars</b> with <b>31,500,000+ review</b></span>
 			</div>
 			<div class="row p2_content">
-				<div class="col-lg-4">
+				<div class="col-lg-4 col-md-6 col-xs-12">
 					<div class="card" style="border: 0;">
 						<a href="#">
 							<img src="https://a0.muscache.com/im/pictures/50616050/43df6979_original.jpg?aki_policy=xx_large" class="card-img-top image_p2" alt="no image">
@@ -93,11 +93,11 @@
 					    	<i class="fa fa-star" aria-hidden="true"></i>
 					    </h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <div class="row">
-					    	<div class="col-lg-3 image_comment">
+					    <div class="row" id="comment">
+					    	<div class="col-lg-3 col-md-3 col-xs-3 image_comment">
 					    		<img src="https://a0.muscache.com/im/users/20134697/profile_pic/1410230911/original.jpg?aki_policy=large" alt="" class="img-thumbnail">
 					    	</div>
-					    	<div class="col-lg-9 col9">
+					    	<div class="col-lg-9 col-md-9 col-xs-7 col9">
 					    		<p class="name">Megan</p>
 					    		<p>United States</p>
 					    	</div>
@@ -105,7 +105,7 @@
 					  </div>
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4 col-md-6 col-xs-12">
 					<div class="card" style="border: 0;" >
 						<a href="#">
 							<img src="https://a0.muscache.com/im/pictures/55305748/58a4aaf0_original.jpg?aki_policy=xx_large" class="card-img-top image_p2" alt="no image">
@@ -120,11 +120,11 @@
 					    	<i class="fa fa-star" aria-hidden="true"></i>
 					    </h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <div class="row">
-					    	<div class="col-lg-3 image_comment">
+					    <div class="row" id="comment">
+					    	<div class="col-lg-3 col-md-3 col-xs-3 image_comment">
 					    		<img src="https://a0.muscache.com/im/pictures/ae3ce523-c5ce-4be0-bf3b-b4aff409a2c4.jpg?aki_policy=large" alt="" class="img-thumbnail">
 					    	</div>
-					    	<div class="col-lg-9 col9">
+					    	<div class="col-lg-9 col-md-9 col-xs-9 col9">
 					    		<p class="name">Huong</p>
 					    		<p>United States</p>
 					    	</div>
@@ -132,7 +132,7 @@
 					  </div>
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4 col-md-6 col-xs-12">
 					<div class="card" style="border: 0;" >
 						<a href="#">
 							<img src="https://a0.muscache.com/im/pictures/491567/2e5ce21e_original.jpg?aki_policy=large" class="card-img-top image_p2" alt="no image">
@@ -147,11 +147,11 @@
 					    	<i class="fa fa-star" aria-hidden="true"></i>
 					    </h5>
 					    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					    <div class="row">
-					    	<div class="col-lg-3 image_comment">
+					    <div class="row" id="comment">
+					    	<div class="col-lg-3 col-md-3 col-xs-3 image_comment">
 					    		<img src="https://a0.muscache.com/im/users/27840838/profile_pic/1424107287/original.jpg?aki_policy=large" alt="" class="img-thumbnail">
 					    	</div>
-					    	<div class="col-lg-9 col9">
+					    	<div class="col-lg-9 col-md-9 col-xs-9 col9">
 					    		<p class="name">Tom</p>
 					    		<p>United States</p>
 					    	</div>
@@ -165,30 +165,30 @@
 		<h2>Traveling with Airbnb</h2>
 		<hr>
 		<div class="row">
-			<div class="col-lg-4">
+			<div class="col-lg-4 col-md-6 col-xs-12">
 				<div class="box_p3" >
 				  <div class="">
 				    <h5 class="card-title"><i class="fa fa-heart-o" aria-hidden="true"></i></h5>
 				    <h6 class="card-subtitle">24/7 customer support</h6>
-				    <p class="card-text">Day or night, we’re here for you. Talk to our support team from anywhere in the world, any hour of day.</p>
+				    <p class="card-text jus">Day or night, we’re here for you. Talk to our support team from anywhere in the world, any hour of day.</p>
 				  </div>
 				</div>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-4 col-md-6 col-xs-12">
 				<div class="box_p3" >
 				  <div class="">
 				    <h5 class="card-title"><i class="fa fa-home" aria-hidden="true"></i></h5>
 				    <h6 class="card-subtitle ">Global hospitality standards</h6>
-				    <p class="card-text">Guests review their hosts after each stay. All hosts must maintain a minimum rating and our hospitality standards to be on Airbnb.</p>
+				    <p class="card-text jus">Guests review their hosts after each stay. All hosts must maintain a minimum rating and our hospitality standards to be on Airbnb.</p>
 				  </div>
 				</div>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-4 col-md-6 col-xs-12">
 				<div class="box_p3" >
 				  <div class="">
 				    <h5 class="card-title"><i class="fa fa-user-o" aria-hidden="true"></i></h5>
 				    <h6 class="card-subtitle">5-star hosts</h6>
-				    <p class="card-text">From fresh-pressed sheets to tips on where to get the best brunch, our hosts are full of local hospitality.</p>
+				    <p class="card-text jus">From fresh-pressed sheets to tips on where to get the best brunch, our hosts are full of local hospitality.</p>
 				  </div>
 				</div>
 			</div>
@@ -199,7 +199,7 @@
 	<div class="part part4">
 		<h2>Just booked in United States</h2>
 		<div class="row">
-			<div class="col-lg-3">
+			<div class="col-lg-3  col-md-6 col-xs-12">
 				<div class="card1">
 					<a href="#">
 						<img src="https://a0.muscache.com/im/pictures/21611933/43f6de69_original.jpg?aki_policy=xx_large" class="card-img-top" alt="Bedroom-detail">
@@ -219,7 +219,7 @@
 				  </div>
 				</div>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-6 col-xs-12">
 				<div class="card1">
 				  <a href="#">
 				  	<img src="https://a0.muscache.com/im/pictures/812e040f-6f6f-4cae-ad67-66c050b57c1f.jpg?aki_policy=xx_large" class="card-img-top" alt="The Living Room and Dining area">
@@ -240,7 +240,7 @@
 				  </div>
 				</div>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-6 col-xs-12">
 				<div class="card1">
 				  <a href="#">
 				  	<img src="https://a0.muscache.com/im/pictures/140333/3ab8f121_original.jpg?aki_policy=xx_large" class="card-img-top" alt="The front door and deck - before we coated the roof to waterproof it.">
@@ -260,7 +260,7 @@
 				  </div>
 				</div>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-6 col-xs-12">
 				<div class="card1">
 				  <a href="#">
 				  	<img src="https://a0.muscache.com/im/pictures/45680811/f4987a12_original.jpg?aki_policy=xx_large" class="card-img-top" alt="homestay">
@@ -294,7 +294,7 @@
 
 	<div class="footer">
 		<div class="row">
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-3 col-xs-12 ">
 				<h5>Airbnb</h5>
 				<ul>
 					<li>Careers</li>
@@ -304,7 +304,7 @@
 					<li>Diversity & Belonging</li>
 				</ul>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-3 col-xs-12">
 				<h5>Discover</h5>
 				<ul>
 					<li>Trust & Safety</li>
@@ -317,7 +317,7 @@
 					<li>Events <span>New</span></li>
 				</ul>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-3 col-xs-12">
 				<h5>Hosting</h5>
 				<ul>
 					<li>Why Host</li>
@@ -328,7 +328,7 @@
 					<li>Open Homes <span>New</span></li>
 				</ul>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-3 col-xs-12">
 				<h5><i class="fa fa-facebook" aria-hidden="true"></i>&nbsp;&nbsp;
 					<i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;&nbsp;
 					<i class="fa fa-camera-retro" aria-hidden="true"></i>
