--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
 	<div class="wrapper">
+		<!---Start Header---->
 		<header id="header">
-			<img src="img/header.jpg" class="img-header"/>
+			<img src="img/header.jpg" class="img-header" alt="img-header1"/>
 			<a class="a-svg-header" href="/?from_belo_click"><svg viewBox="0 0 1000 1000" role="img" aria-label="Home" focusable="false" style="height:1em;width:1em;display:block;fill:#ffffff"><path d="m499.3 736.7c-51-64-81-120.1-91-168.1-10-39-6-70 11-93 18-27 45-40 80-40s62 13 80 40c17 23 21 54 11 93-11 49-41 105-91 168.1zm362.2 43c-7 47-39 86-83 105-85 37-169.1-22-241.1-102 119.1-149.1 141.1-265.1 90-340.2-30-43-73-64-128.1-64-111 0-172.1 94-148.1 203.1 14 59 51 126.1 110 201.1-37 41-72 70-103 88-24 13-47 21-69 23-101 15-180.1-83-144.1-184.1 5-13 15-37 32-74l1-2c55-120.1 122.1-256.1 199.1-407.2l2-5 22-42c17-31 24-45 51-62 13-8 29-12 47-12 36 0 64 21 76 38 6 9 13 21 22 36l21 41 3 6c77 151.1 144.1 287.1 199.1 407.2l1 1 20 46 12 29c9.2 23.1 11.2 46.1 8.2 70.1zm46-90.1c-7-22-19-48-34-79v-1c-71-151.1-137.1-287.1-200.1-409.2l-4-6c-45-92-77-147.1-170.1-147.1-92 0-131.1 64-171.1 147.1l-3 6c-63 122.1-129.1 258.1-200.1 409.2v2l-21 46c-8 19-12 29-13 32-51 140.1 54 263.1 181.1 263.1 1 0 5 0 10-1h14c66-8 134.1-50 203.1-125.1 69 75 137.1 117.1 203.1 125.1h14c5 1 9 1 10 1 127.1.1 232.1-123 181.1-263.1z"></path></svg></a>
 			<div class="container">
 					<div class="content-header">	
@@ -21,8 +22,8 @@
 				<h2 class="h2-title">Find homes in United States on Airbnb</h2>
 				<p class="p-frmSearch">Discover entire homes and private rooms perfect for any trip</p>
 				<div class="group-form">
-					<label for="where" class="">where</label><br>
-					<input type="text" name="where"placeholder="Anywhere" id="anywhere">
+					<label for="anywhere">where</label><br>
+					<input type="text" name="where" placeholder="Anywhere" id="anywhere">
 				</div>
 				<div class="group-form">
 					<div class="datetime check-in">
@@ -37,9 +38,9 @@
 				</div>
 				<div class="group-form">
 					<div class="guestpicker adult">
-						<label for="adults">adults</label><br>
-						<select name="adults">
-							<option value="adult1" seclected="seclected">1 adult</option>
+						<label for="adult">adults</label><br>
+						<select name="adults" id="adult">
+							<option value="adult1">1 adult</option>
 							<option value="adult2">2 adult</option>
 							<option value="adult3">3 adult</option>
 							<option value="adult4">4 adult</option>
@@ -54,9 +55,9 @@
 						</select>
 					</div>
 					<div class="guestpicker children">
-						<label for="childrens">Children</label><br>
-						<select name="childrens">
-							<option value="children0" selected="selected">0 children</option>
+						<label for="children">Children</label><br>
+						<select name="childrens" id="children">
+							<option value="children0">0 children</option>
 							<option value="children1">1 children</option>
 							<option value="children2">2 children</option>
 							<option value="children3">3 children</option>
@@ -69,6 +70,8 @@
 			</div>
 			</div> 
 		</header>
+		<!----End Header---->
+		<!-----Start customerReviews---->
 		<section class="customerReviews">
 			<div class="container">
 				<h2 class="h2-question">What guests are saying about homes in United States</h2>
@@ -76,50 +79,56 @@
 				<div class="listing-card">
 					<div class="item-card">
 						<div class="content-card">
-							<a href="#" alt=""><img src="https://a0.muscache.com/im/pictures/3922094/546ce84f_original.jpg?aki_policy=large" alt=""/></a>
-							<p  class="start">
-								<span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span>
-							</p>
-							<p class="content-p">The studio is a really comfortable and well designed space, for those travellers looking for a place where they can totally relax after a... </p>
-							<div class="customer">
-								<div class="img-customer">
-									<img src="https://a0.muscache.com/im/users/36137188/profile_pic/1434911824/original.jpg?aki_policy=large"  class="" alt=""/>
-								</div>
-								<div class="info-customer">
-									<span class="name">Robert</span><br>
-									<span class="">United Kingdom</span>
+							<a href="#"><img src="https://a0.muscache.com/im/pictures/3922094/546ce84f_original.jpg?aki_policy=large" alt="img-card1"/></a>
+							<div class="text-card">
+								<p  class="start">
+									<span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span>
+								</p>
+								<p class="content-p">The studio is a really comfortable and well designed space, for those travellers looking for a place where they can totally relax after a... </p>
+								<div class="customer">
+									<div class="img-customer">
+										<img src="https://a0.muscache.com/im/users/36137188/profile_pic/1434911824/original.jpg?aki_policy=large"  class="customer1" alt="img-customer1"/>
+									</div>
+									<div class="info-customer">
+										<span class="name">Robert</span><br>
+										<span class="national">United Kingdom</span>
+									</div>
+							    </div>
+						    </div>
+						</div>
+						<div class="content-card">
+							<a href="#"><img src="https://a0.muscache.com/im/pictures/b2be6119-333f-405b-89f8-c69b70ad5bf8.jpg?aki_policy=large" alt="img-card2"/></a>
+							<div class="text-card">
+								<p  class="start">
+									<span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span>
+								</p>
+								<p class="content-p">Tom and Judy were great hosts. Their home was beautiful, very clean and ideally located in Napa. I would recommend staying at their... </p>
+								<div class="customer">
+									<div class="img-customer" >
+										<img src="https://a0.muscache.com/im/users/7639912/profile_pic/1374485173/original.jpg?aki_policy=large" alt="img-customer2"/>
+									</div>
+									<div class="info-customer">
+										<span class="name">Mannie</span><br>
+										<span class="national">France</span>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="content-card">
-							<a href="#" alt=""><img src="https://a0.muscache.com/im/pictures/b2be6119-333f-405b-89f8-c69b70ad5bf8.jpg?aki_policy=large" alt=""/></a>
-							<p  class="start">
-								<span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span>
-							</p>
-							<p class="content-p">Tom and Judy were great hosts. Their home was beautiful, very clean and ideally located in Napa. I would recommend staying at their... </p>
-							<div class="customer">
-								<div class="img-customer" >
-									<img src="https://a0.muscache.com/im/users/7639912/profile_pic/1374485173/original.jpg?aki_policy=large" alt=""/>
-								</div>
-								<div class="info-customer">
-									<span class="name">Mannie</span><br>
-									<span>France</span>
-								</div>
-							</div>
-						</div>
-						<div class="content-card">
-							<a href="#" alt=""><img src="https://a0.muscache.com/im/pictures/56916238/e313604e_original.jpg?aki_policy=large" alt=""/></a>
-							<p  class="start">
-								<span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span>
-							</p>
-							<p class="content-p">I made this reservation on behalf of my parents as a thank you gift (giving them a weekend out of town), so I will simply pass on what they told...</p>
-							<div class="customer">
-								<div class="img-customer">
-									<img src="https://a0.muscache.com/im/users/24170121/profile_pic/1416974541/original.jpg?aki_policy=large" alt=""/>
-								</div>
-								<div class="info-customer">
-									<span class="name">Amanda</span><br>
-									<span>United States</span>
+							<a href="#"><img src="https://a0.muscache.com/im/pictures/56916238/e313604e_original.jpg?aki_policy=large" alt="img-card3"/></a>
+							<div class="text-card">
+								<p  class="start">
+									<span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span><span class="icon-start"><i class="fa fa-star" aria-hidden="true"></i></span>
+								</p>
+								<p class="content-p">I made this reservation on behalf of my parents as a thank you gift (giving them a weekend out of town), so I will simply pass on what they told...</p>
+								<div class="customer">
+									<div class="img-customer">
+										<img src="https://a0.muscache.com/im/users/24170121/profile_pic/1416974541/original.jpg?aki_policy=large" alt="img-customer3"/>
+									</div>
+									<div class="info-customer">
+										<span class="name">Amanda</span><br>
+										<span class="national">United States</span>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -127,6 +136,8 @@
 				</div>
 			</div>
 		</section>
+		<!---End Section customerReviews---->
+		<!---Start Section service-->
 		<section id="service">
 			<div class="container">
 				<div class="service-traveling">
@@ -135,21 +146,21 @@
 					<div class="content-service">
 						<div class="item-service">
 							<div style="margin-bottom:16px"><svg style="height:40px;width:40px;display:block;overflow:visible" viewBox="0 0 32 32" fill="#60B6B5" fill-opacity="0" stroke="#60B6B5" stroke-width="1.5" focusable="false" aria-hidden="true" role="presentation" stroke-linecap="round" stroke-linejoin="round"><path d="m23.99 2.75c-.3 0-.6.02-.9.05-1.14.13-2.29.51-3.41 1.14-1.23.68-2.41 1.62-3.69 2.94-1.28-1.32-2.46-2.25-3.69-2.94-1.12-.62-2.27-1-3.41-1.14a7.96 7.96 0 0 0 -.9-.05c-1.88 0-7.26 1.54-7.26 8.38 0 7.86 12.24 16.33 14.69 17.95a1 1 0 0 0 1.11 0c2.45-1.62 14.69-10.09 14.69-17.95 0-6.84-5.37-8.38-7.26-8.38"></path></svg></div>
-							<div class="">
+							<div>
 								<span class="title-service">24/7 customer support</span>
 								<p class="p-service">Day or night, we’re here for you. Talk to our support team from anywhere in the world, any hour of day.</p>
 							</div>
 						</div>
 						<div class="item-service">
 							<div style="margin-bottom:16px"><svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height:40px;width:40px;display:block;fill:#60B6B5"><path d="m23.57 11.4-1.75-1.76-3.85-3.87-1.78-1.79-2.7-2.71-.82-.83-.22-.23-.06-.06c-.22-.22-.53-.22-.73-.02l-1.75 1.76-3.85 3.87-3.85 3.87-1.75 1.76a1.49 1.49 0 0 0 -.44 1.05v.01c0 .38.15.77.44 1.06l.55.55a1.49 1.49 0 0 0 2.01.08v8.4c0 .81.68 1.45 1.5 1.45h15c .82 0 1.5-.65 1.5-1.45v-8.4c.59.49 1.45.47 2.01-.08l.55-.55c.29-.29.44-.68.44-1.06v-.01c0-.38-.14-.77-.44-1.06zm-3.57 11.16c0 .24-.22.45-.5.45h-15c-.28 0-.5-.21-.5-.45v-9.36l8-7.99 8 7.99zm2.85-9.74-.55.55c-.2.2-.52.2-.71.01l-9.24-9.22a.5.5 0 0 0 -.71 0l-9.24 9.22a.5.5 0 0 1 -.71-.01l-.55-.55a.5.5 0 0 1 -.01-.71l1.75-1.76 3.85-3.87 3.85-3.87 1.4-1.4.77.77 2.7 2.71 1.78 1.79 3.85 3.87 1.75 1.76a.51.51 0 0 1 -.01.71z" fill-rule="evenodd"></path></svg></div>
-							<div class="">
+							<div>
 								<span class="title-service">Global hospitality standards</span>
 								<p class="p-service">Guests review their hosts after each stay. All hosts must maintain a minimum rating and our hospitality standards to be on Airbnb.</p>
 							</div>
 						</div>
 						<div class="item-service">
 							<div style="margin-bottom:16px"><svg viewBox="0 0 24 24" role="presentation" aria-hidden="true" focusable="false" style="height:40px;width:40px;display:block;fill:#60B6B5"><path d="m15.37 13.54-.01.01a.53.53 0 0 0 .01-.01m-.37 9.46h-11.5c-.28 0-.9-.22-1.38-.58-.71-.52-1.12-1.31-1.12-2.42 0-.04 0-.07.01-.11.09-1.1 1.59-2.44 4.02-3.79a33.14 33.14 0 0 1 2.9-1.42 35.57 35.57 0 0 1 1.31-.54c.63-.26.71-.95.18-1.35a4.55 4.55 0 0 1 -.38-.31 7.1 7.1 0 0 1 -.84-.9c-.73-.92-1.17-1.96-1.2-3.09v-2.99c.07-2.36 2.38-4.5 5.04-4.5 2.67 0 4.96 2.14 4.96 4.5v3c0 1.13-.43 2.17-1.15 3.11a7.35 7.35 0 0 1 -1.09 1.13l-.08.07c-.02.02-.02.02-.05.05s-.03.03-.09.14c-.05.47-.05.47.46.7a.49.49 0 0 0 .36-.15l.06-.05a8.32 8.32 0 0 0 1.23-1.28c.84-1.1 1.35-2.35 1.35-3.72v-3c0-2.92-2.75-5.5-5.96-5.5-3.2 0-5.96 2.56-6.04 5.49v3.01c.03 1.38.56 2.62 1.42 3.71.31.39.63.73.96 1.03.06.05.1.08.15.12a34.28 34.28 0 0 0 -3.98 1.87c-2.73 1.51-4.41 3.02-4.54 4.58a2.41 2.41 0 0 0 -.01.19c0 2.55 1.91 3.99 3.5 4h11.5a.5.5 0 1 0 0-1m7.67-4.22c-.36.74-.97 1.55-1.78 2.38a20.33 20.33 0 0 1 -1.89 1.71 19.94 19.94 0 0 1 -1.89-1.71c-.81-.83-1.42-1.64-1.78-2.38-.22-.45-.33-.86-.33-1.23 0-.99.61-1.56 1.43-1.56.7 0 1.55.53 2.18 1.31a.5.5 0 0 0 .78 0c .63-.78 1.48-1.31 2.18-1.31.82 0 1.43.57 1.43 1.56 0 .36-.11.77-.33 1.23m-1.1-3.78c-.89 0-1.82.5-2.57 1.25-.75-.76-1.68-1.25-2.57-1.25-1.36 0-2.43 1.01-2.43 2.56 0 .53.15 1.08.43 1.66.41.85 1.09 1.74 1.96 2.64a21.09 21.09 0 0 0 2.31 2.05.5.5 0 0 0 .6 0 20.91 20.91 0 0 0 2.31-2.05c.87-.9 1.55-1.79 1.96-2.64.28-.58.43-1.13.43-1.66 0-1.55-1.07-2.56-2.43-2.56" fill-rule="evenodd"></path></svg></div>
-							<div class="">
+							<div>
 								<span class="title-service">5-star hosts</span>
 								<p class="p-service">From fresh-pressed sheets to tips on where to get the best brunch, our hosts are full of local hospitality.</p>
 							</div>
@@ -159,12 +170,14 @@
 				</div>
 			</div>
 		</section>
+		<!---End Section service---->
+		<!-----Start Section justBooked----->
 		<section id="justBooked">
 			<div class="container">
 				<h2 class="h2-justBooked">Just booked in United States</h2>
 				<div class="booked">
 					<div class="item-book">
-						<img src="https://a0.muscache.com/im/pictures/21611933/43f6de69_original.jpg?aki_policy=large" alt=""/>
+						<img src="https://a0.muscache.com/im/pictures/21611933/43f6de69_original.jpg?aki_policy=large" alt="img-justbooked1"/>
 						<div class="information-house">
 							<a href="#">
 							<span class="title-house justbook">Treehouse . atlanta</span>
@@ -177,7 +190,7 @@
 						</div>
 					</div>
 					<div class="item-book">
-						<img src="https://a0.muscache.com/im/pictures/812e040f-6f6f-4cae-ad67-66c050b57c1f.jpg?aki_policy=large" alt=""/>
+						<img src="https://a0.muscache.com/im/pictures/812e040f-6f6f-4cae-ad67-66c050b57c1f.jpg?aki_policy=large" alt="img-justbooked2"/>
 						<div class="information-house">
 							<a href="#">
 							<span class="title-house">Entire house . joshua tree</span>
@@ -190,7 +203,7 @@
 						</div>
 					</div>
 					<div class="item-book">
-						<img src="https://a0.muscache.com/im/pictures/140333/3ab8f121_original.jpg?aki_policy=large" alt=""/>
+						<img src="https://a0.muscache.com/im/pictures/140333/3ab8f121_original.jpg?aki_policy=large" alt="img-justbooked3"/>
 						<div class="information-house">
 							<a href="#">
 							<span class="title-house">demo house . aptos</span>
@@ -203,7 +216,7 @@
 						</div>
 					</div>
 					<div class="item-book">
-						<img src="https://a0.muscache.com/im/pictures/45680811/f4987a12_original.jpg?aki_policy=large" alt=""/>
+						<img src="https://a0.muscache.com/im/pictures/45680811/f4987a12_original.jpg?aki_policy=large" alt="img-justbooked4"/>
 						<div class="information-house">
 							<a href="#">
 							<span class="title-house">entire house . pioneertown</span>
@@ -218,13 +231,17 @@
 				</div>
 			</div>
 		</section>
-		<section>
+		<!-----End Section justBooked----->
+		<!-----Start Section  showAll----->
+		<section id="showAll">
 			<div class="container">
 				<div class="btnShowAll">
 					<span class="linkShowAll"><a href="#">Show all (22,000+)</a></span><span class="icon-right"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a></span>
 				</div>
 			</div>
 		</section>
+		<!-----End Section  traveling----->
+		<!-----Start Section  traveling----->
 		<section id="traveling">
 			<div class="container">
 				<h2 class="h2-traveling">When are you traveling?</h2>
@@ -232,9 +249,13 @@
 				<div class="buttonAddDate"><button type="submit" id="addDate">Add dates</button></div>
 			</div>
 		</section>
+		<!------End Section  traveling----->
+		<!-----Start footer  #footer----->
 		<footer id="footer">
 			<div class="border-hr">
-				<hr>
+				<div class="border-hr">
+					<hr>
+				</div>
 			</div>
 			<div class="container">
 				<div class="footer-top">
@@ -302,8 +323,8 @@
 				</div>
 			</div>
 		</footer>
+		<!-----End footer  #footer----->
 	</div>	
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="js/jquery-ui-1.9.2.custom.min.js"></script>
   	<script src="js/index.js"></script>
