--- a/boostrap/index.html
+++ b/boostrap/index.html
@@ -21,32 +21,30 @@
       </div>
     </header>
     <section>
-        <nav>
-            <ul>
-                <li><a href="#">All</a></li>
-                <li><a href="#">Commercial</a></li>
-                <li><a href="#">Landscaping</a></li>
-                <li><a href="#">New Construction</a></li>
-                <li><a href="#">Residential</a></li>
-            </ul>
-        </nav>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4"><img src="1.jpg"/></div>
-                <div class="col-md-4"><img src="2.jpg"/></div>
-                <div class="col-md-4"><img src="3.jpg"/></div>
-            </div>
-            <div class="row">
-                    <div class="col-md-4"><img src="4.jpg"/></div>
-                    <div class="col-md-4"><img src="5.jpg"/></div>
-                    <div class="col-md-4"><img src="6.jpg"/></div>
-                </div>
-                <div class="row">
-                        <div class="col-md-4"><img src="7.jpg"/></div>
-                        <div class="col-md-4"><img src="8.jpg"/></div>
-                        <div class="col-md-4"><img src="9.jpg"/></div>
-                    </div>
+      <nav>
+        <ul>
+          <li><a href="#">All</a></li>
+          <li><a href="#">Commercial</a></li>
+          <li><a href="#">Landscaping</a></li>
+          <li><a href="#">New Construction</a></li>
+          <li><a href="#">Residential</a></li>
+        </ul>
+      </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col"><img src="1.jpg" /></div>
+          <div class="col"><img src="2.jpg" /></div>
+          <div class="col"><img src="3.jpg" /></div>
+
+          <div class="col"><img src="4.jpg" /></div>
+          <div class="col"><img src="5.jpg" /></div>
+          <div class="col"><img src="6.jpg" /></div>
+
+          <div class="col"><img src="7.jpg" /></div>
+          <div class="col"><img src="8.jpg" /></div>
+          <div class="col"><img src="9.jpg" /></div>
         </div>
+      </div>
     </section>
   </body>
 </html>
