--- a/HTML_Bai1/index.html
+++ b/HTML_Bai1/index.html
@@ -15,17 +15,17 @@
                 <div class="wrapper_form">
                     <div class="wrap_from">
                         <div class="title_form">
-                            <h2>Find homes in United States on Airbnb</h2>
+                            <h2>Trouvez des logements à États-Unis sur Airbnb</h2>
                         </div>
-                        <div class="content_form">Discover entire homes and private rooms perfect for any trip.</div>
+                        <div class="content_form">Découvrez des chambres privées ou des logements entiers, parfaitement adaptés à tout type de voyage.</div>
                         <div class="form">
                             <form>
                                 <div class="form_group">
                                     <div class="label">
-                                        <label>WHERE</label>
+                                        <label>OÙ</label>
                                     </div>
                                     <div class="_input">
-                                        <input type="text" placeholder="Anywhere">
+                                        <input type="text" placeholder="Partout">
                                     </div>
                                 </div>
 
@@ -33,7 +33,7 @@
                                     <div class="col_2">
                                         <div class="right_col2">
                                             <div class="label">
-                                                <label>CHECK-IN</label>
+                                                <label>ARRIVÉE</label>
                                             </div>
                                             <div class="_input">
                                                 <input type="date" placeholder="dd/MM/yyyy">
@@ -44,7 +44,7 @@
                                     <div class="col_2">
                                         <div class="left_col2">
                                             <div class="label">
-                                                <label>CHECKOUT</label>
+                                                <label>DÉPART</label>
                                             </div>
                                             <div class="_input">
                                                 <input type="date">
@@ -74,15 +74,15 @@
                                     <div class="col_2">
                                         <div class="left_col2">
                                             <div class="label">
-                                                <label>CHILDREN</label>
+                                                <label>ENFANTS</label>
                                             </div>
                                             <div class="select">
                                                 <select name="enfant" id="enfant">
-                                                    <option value="0" selected>0 children</option>
+                                                    <option value="0" selected>0 enfant</option>
                                                     <option value="1">1 child</option>
-                                                    <option value="2">2 children</option>
-                                                    <option value="3">3 children</option>
-                                                    <option value="4">4 children</option>
+                                                    <option value="2">2 enfant</option>
+                                                    <option value="3">3 enfant</option>
+                                                    <option value="4">4 enfant</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -90,7 +90,7 @@
                                 </div>
 
                                 <div class="btn_submit">
-                                    <button type="submit">Search</button>
+                                    <button type="submit">Rechercher</button>
                                 </div>
                             </form>
                         </div>
@@ -143,7 +143,7 @@
                             </ul>
                         </div>
                         <div class="clear"></div>
-                        <div class="feedback_conten">Deb, our host was very welcoming and met us in person. She checked to make sure we were settled and had all expectations clearly state ...</div>
+                        <div class="feedback_conten">Super chambre, très bien décorée, spacieuse et au calme. Jim et Jackie ont été très sympathiques, et nous avons eu un excellent  ...</div>
 
                         <div class="guests">
                             <div class="col_2_8">
@@ -185,7 +185,7 @@
                             </ul>
                         </div>
                         <div class="clear"></div>
-                        <div class="feedback_conten">Our stay with Kathy was great!She answered messages promptly and offered us some great recommendations on Sonoma vineyards.Her ...</div>
+                        <div class="feedback_conten">Notre passage chez Ammy était notre toute première expérience avec airbnb et nous avons été ravis. Nous avons trouvé exacteme ...</div>
 
                         <div class="guests">
                             <div class="col_2_8">
@@ -195,8 +195,8 @@
                             </div>
                             <div class="col_8_2">
                                 <div class="information">
-                                    <div class="name">Sylvie</div>
-                                    <div class="country">Frances</div>
+                                    <div class="name">Jean-Pierre</div>
+                                    <div class="country">Canada</div>
                                 </div>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
                             </ul>
                         </div>
                         <div class="clear"></div>
-                        <div class="feedback_conten">Très sympathique séjour à Phoenix ! Dernière étape airbnb de notre road trip américain, ce fût sans aucun doute la meilleure. Logement  ...</div>
+                        <div class="feedback_conten">Accueil et disponibilité assortis de discrétion; cela dans un magnifique environnement - le jardin est superbe - ainsi qu'un très chaleureu ...</div>
 
                         <div class="guests">
                             <div class="col_2_8">
@@ -238,7 +238,7 @@
                             <div class="col_8_2">
                                 <div class="information">
                                     <div class="name">Jonatan</div>
-                                    <div class="country">Frances</div>
+                                    <div class="country">Suisse</div>
                                 </div>
                             </div>
                         </div>
