--- a/Airbnb_CSS/airbnb.html
+++ b/Airbnb_CSS/airbnb.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="CSS/airbnb.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -35,13 +36,13 @@
                                     <label for="">
                                         <p>ARRIVÉE</p>
                                     </label>
-                                    <input type="date" placeholder="dd/mm/yyyy">
+                                    <input class="date" type="date" placeholder="dd/mm/yyyy">
                                 </div>
                                 <div class="out">
                                     <label for="">
                                         <p>DÉPART</p>
                                     </label>
-                                    <input type="date" placeholder="dd/mm/yyyy">
+                                    <input id="date" type="date" placeholder="dd/mm/yyyy">
                                 </div>
                             </div>
 
@@ -466,6 +467,15 @@
             </div>
         </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
