--- a/Airbnb_Bootstrap/airbnb.html
+++ b/Airbnb_Bootstrap/airbnb.html
@@ -24,7 +24,7 @@
     </header>
     <div class="banner">
         <div class="img">
-            <div>
+            <div class="img_padding">
                 <img src="https://a0.muscache.com/4ea/air/r:w1550-h600-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg"
                     alt=""></div>
             <div class="containerr">
