--- a/BT_JS_Jquery/mega_menu.html
+++ b/BT_JS_Jquery/mega_menu.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="CSS/mega_menu.css">
 </head>
 
@@ -69,11 +70,19 @@
         </div>
     </div>
 
+
     <script>
+        var navs = document.querySelectorAll("ul li");
+        for (i = 0; i < navs.length; i++) {
+            var nav = navs[i];
+            nav.onclick = function(){
+              var mega = this.getElementsByClassName('drop_2')
+              console.log(mega);
+              
+            } 
+        }
 
     </script>
-
-
 </body>
 
 </html>
