upadate form-search

--- a/bt-Jquery/index.html
+++ b/bt-Jquery/index.html
@@ -15,6 +15,25 @@
 
 <body>
     <div class="wrap"></div>
+    <div class="search-results-header">
+        <div class="container">
+            <div class="row">
+                <div class="form-search">
+                    <h2 class="heading-search-result">Search ST Engineering</h2>
+                    <div class="input-box-search-header">
+                        <input type="text" id="input-search-header" class="input-search-header">
+                        <button type="button"  class="btn btn-search-header" id="searchHeader">
+                            <span class="fas fa-search"></span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="close-search-header-box">
+                    <span class="fas fa-times"></span>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="header">
         <div class="corporate-header">
             <div class="container">
@@ -323,6 +342,9 @@
                                 </li>
                             </ul>
                         </nav>
+                        <span class="search-header-box">
+                            <span class="fas fa-search btn-search-header"></span>
+                        </span>
                     </div>
                 </div>
             </div>
