--- a/duyna-project/index.html
+++ b/duyna-project/index.html
@@ -4,7 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Homework</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -35,7 +38,7 @@
 
 	<div class="container form-container">
 		<div class="row">
-			<div class="col-lg-6 col-md-12 col-12 form">
+			<div class="col-lg-6 col-md-8 col-12 form">
 				<h2>Find homes in United States on Airbnb</h2>
 				<div class="description">
 					<p>Discover entire homes and private rooms perfect for any trip.</p>
@@ -43,7 +46,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-6 col-md-12 col-12 form">
+			<div class="col-lg-6 col-md-8 col-12 form">
 				<div class="where">
 					<span class="label">WHERE</span><br>
 					<input type="text" name="where" class="input" placeholder="Anywhere">
@@ -51,17 +54,23 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-3 col-md-6 col-6 form">
+			<div class="col-lg-3 col-md-4 col-6 form">
 				<span class="label">CHECK-IN</span><br>
-				<input type="text" name="where" class="input" placeholder="mm/dd/yyyy">
+				<div>
+					<input type='text' name="checkin" class="input"   id="datepicker-checkin" placeholder="mm/dd/yyyy" />
+					
+				</div>
 			</div>
-			<div class="col-lg-3 col-md-6 col-6 form">
+			<div class="col-lg-3 col-md-4 col-6 form">
 				<span class="label">CHECKOUT</span><br>
-				<input type="text" name="where" class="input" placeholder="mm/dd/yyyy">	
+				<div class='input-group date' id='datepicker'>
+					<input type='text' name="checkout" class="input" id="datepicker-checkout" placeholder="mm/dd/yyyy" />
+					
+				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-3 col-md-6 col-6 form">
+			<div class="col-lg-3 col-md-4 col-6 form">
 				<span class="label">ADULTS</span><br>
 				<select name="adult" class="input">
 					<option value="1">1 adult</option>
@@ -82,7 +91,7 @@
 					<option value="16">16 adults</option>
 				</select>
 			</div>
-			<div class="col-lg-3 col-md-6 col-6 form">
+			<div class="col-lg-3 col-md-4 col-6 form">
 				<span class="label">CHILDREN</span><br>
 				<select name="children" class="input">
 					<option value="1">1 child</option>
@@ -93,7 +102,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-6 col-md-12 col-12 form">
+			<div class="col-lg-6 col-md-8 col-12 form">
 				<button type="submit" class="submit-button"><span style="color: white;"><b>Search</b></span></button>
 			</div>
 		</div>
@@ -419,5 +428,20 @@
 	</div>
 </div>
 </footer>
+<script>
+		$('#datepicker-checkin').datepicker({
+			format: "mm/dd/yyyy",
+			autoclose: true,
+            uiLibrary: 'bootstrap4'
+        });
+
+	
+		$('#datepicker-checkout').datepicker({
+			format: "mm/dd/yyyy",
+			autoclose: true,
+			uiLibrary: 'bootstrap4'
+
+		});
+</script>
 </body>
 </html>
